--- a/content/updates/2025-05-12.md
+++ b/content/updates/2025-05-12.md
@@ -89,6 +89,16 @@ draft: false
     - ooo after offsite
 
 ### vac:sc:
+- `status:2025q2-sn-native-bridge-yield-bearing-module:research-design`
+  -  continue research + tests on the bridge yielding functionality
+- `status:2025q2-maintaining-status-contracts`
+    - Move `vaultData.lockUntil` into `StakeVault`
+        - https://github.com/vacp2p/staking-reward-streamer/pull/213
+    - Started working on AccessControl for `Karma` as non-upgrade version
+        - https://github.com/vacp2p/staking-reward-streamer/pull/214
+- `admin/misc`
+    - Write down team lead tasks to prepare for parental leave
+        - https://www.notion.so/Team-lead-work-and-responsibilities-1eb8f96fb65c80bf89c8e7a29d44d910
 
 ### vac:acz:
 - `ift:2025q2-zerokit:parallel-computation-study`
@@ -175,4 +185,18 @@ draft: false
     - Lauched the training for those who got caught during the last phishing campaign (18)
 
 ### vac:nes:
+- `state-separation-architecture-poc:sc-update`
+    - Looked into SE/DE previous works, still did not come up with a concrete way to do it. We will take the decision in the team this week.
+    - Answered  doubts about Q4/Q1 documentations.
+    - Worked on Privacy flags and investigated whether we need True flags or not.
+    - Met with engineers regarding provability issues and hybrid smart contracts.
+    -  Revised and investigated how other projects are using smart contracts, I think we can make a better job.
+- `state-separation-architecture-poc:priv-impl`
+    - Private provability model.
+    - Call with Moudy and Oleksandr on provability issues.
+    - Private state provability proposal PR.
+    - Smart contracts execution types discussion.
+- `state-separation-architecture-poc:onboarding’
+    - Research wise I started to write some very high level notes on what I understand about NSSA with my own words (see here). Also I went through Moudy’s answers to my questions about Q4/Q1 docs and discussed with him about some points in UTXOs design (see here) and the need of privacy flags in the system.
+    - Engineering: I made progress with the update to the utxo crate (draft PR here). While doing so I created a PR (here) and some Issues (#66, #69 #70, #71) with questions and comments about implementations that seemed to deviate from the current specifications.
 
