--- a/content/updates/2025-05-19.md
+++ b/content/updates/2025-05-19.md
@@ -18,6 +18,44 @@ draft: false
 - new commitment for Status Network Staking RFC
 
 ### vac:p2p:
+- `ift:2025q1-gossipsub-perf-improvements`
+  - Work on performance comparison for current gossipsub proposals
+	- Created PoC implementation for push-pull phase transition
+	- Created PoC implementation for GossipSub v2.0 (Will finalize today)
+- `vac:p2p:ift:2025q2-nimlibp2p-kad-dht:routing-and-rpc`
+    - Writing unit-tests in [nim-libp2p#1324](https://github.com/vacp2p/nim-libp2p/pull/1324).
+    - Ironing out impl of routing tables, and finding nodes based on test units
+- `vac:p2p:ift:2025q2-nimlibp2p-maintenance:maintenance`
+  - [nim-quic#71](https://github.com/vacp2p/nim-quic/pull/71) fix: close should clean stream userdata 
+  - investigated failing hole punching interop tests
+      - chore(interop): use the same redis dependency [nim-libp2p#1364](https://github.com/vacp2p/nim-libp2p/pull/1364)
+      - chore(hp): add timeout on dial [nim-libp2p#1378](https://github.com/vacp2p/nim-libp2p/pull/1378) 
+  - investigated failing transport interop tests
+      - ci(interop): disable transport interop with zig-v0.0.1 [nim-libp2p#1372](https://github.com/vacp2p/nim-libp2p/pull/1372)
+  - investigated unit test hanging on macos
+      - [nim-libp2p#1376](https://github.com/vacp2p/nim-libp2p/pull/1376)
+  - speculation: all three of above suggest issues with quic transport (or some connection issues)
+  - Forked [`nim-jwt` into vacp2p](https://github.com/vacp2p/nim-jwt) to apply [a patch I needed](https://github.com/vacp2p/nim-jwt/commit/0a59984730c87f703f3c5b2e833b8b6a1b45aedc) since the latest commit is from 2 years ago and the maintainer hasn't responded to [my PR](https://github.com/yglukhov/nim-jwt/pull/22) in a couple weeks
+    - Bumped [nim-stew version to 0.4.0](https://github.com/status-im/nim-stew/pull/246) in order to properly get new features from it (especially base36) per [@arnetheduck's recommendation](https://discord.com/channels/613988663034118151/740631022080622745/1371484042800664671)
+    - [`README.md` "improvements"](https://github.com/vacp2p/nim-libp2p/pull/1373)
+- `vac:p2p:ift:2025q2-nimlibp2p-webtransport:http3-client`
+    - smaller progress made
+    - realized that http3 will not be easly integrated on top of quic because http3 requires different callbacks, which requires structires...
+- Created [draft PR for AutoTLS](https://github.com/vacp2p/nim-libp2p/pull/1358)
+    - `vac:p2p:ift:2025q2-nimlibp2p-autotls:certificate-request-auth`
+        - OK with tests
+    - `vac:p2p:ift:2025q2-nimlibp2p-autotls:dns-challenge`
+        - OK with tests
+    - `vac:p2p:ift:2025q2-nimlibp2p-autotls:certificate-installation`
+        - In progress, tests already in place
+    - On Thursday I figured why `testall` was failing when adding `testatutotls.nim` to `testnative` (TLDR: GC shennanigans) 
+- `misc/admin`
+    - Work 1d with Sasha from js-waku team to figure out why yamux was sending a goaway
+        - multistream select spec is not clear in what to do when a protocol is not supported
+        - js-waku was attempting to use store protocol and nwaku did not have it enabled
+        - js-libp2p sends a goaway when a protocol is not supported.
+        - Other implementations do different: nim-libp2p sends a fin, go-waku sends a rst
+    - 2 cc 1d OoO
 
 ### vac:tke:
 - `vac:tke:ift:ghost:tokenomics-design`
@@ -50,6 +88,32 @@ draft: false
   - researched work on optimal control and minting
 
 ### vac:qa:
+- `nomos:2025q2-da-testing:data-confidentiality`
+    - test: Da networking encryption - next step is to create malicious node
+    [PR 1264 - in review](https://github.com/logos-co/nomos/pull/1264)
+
+- `waku:2025q2-interop-testing:maintenance`
+    - Errors related to sub/unsubscribe [simlulated locally](https://discord.com/channels/1110799176264056863/1111541184490393691/1371668384185450666)
+   - After analysis turned out that latest version on master of nwaku has errors in handling topics [issue](https://github.com/waku-org/nwaku/issues/3414) opened 
+
+- `nomos:2025q2-e2e-testing:maintenance`
+    - fix: Update Rust version to 1.87 for Dockerfile debug 
+    [PR 1278 in progress](https://github.com/logos-co/nomos/pull/1278)
+    
+-  `waku:2025q2-waku-go-bindings-testing:maintenance`
+   - Created [PR](https://github.com/waku-org/waku-go-bindings/pull/62) and merge to master with suspected fix for issue in json format & changes in CI jobs to       record memory readings of stress tests 
+   - Created [PR](https://github.com/waku-org/waku-go-bindings/pull/68) with additonal fixes and modifications in stress tests & CI yml files to address         limiations in the execution of stress test 
+   - Opened [issue](https://github.com/waku-org/waku-go-bindings/issues/67) with fix to json format (issue closed as the josn format currently works fine using          latest nwaku version)
+   - Found 4 failed tests & still issues in msgchannel handling that block running endurance jobs - all reported to Gabriel and Ivan with analysis [sheet](https://discord.com/channels/864066763682218004/1196521654214459526/1373785596971188295) of each issue     
+
+ - `vac:qa:waku:2025q2-waku-sync-testing:unit `
+   - FIx review points on [PR](https://github.com/waku-org/nwaku/pull/3388)
+   - Making [second PR](https://github.com/waku-org/nwaku/pull/3397) ready for review  
+- `vac:2025q2-nim-libp2p-testing:gossipsub-extended`
+  - [test(gossipsub): control message](https://github.com/vacp2p/nim-libp2p/pull/1191) - merged
+  - [test(gossipsub): Topic Membership Tests](https://github.com/vacp2p/nim-libp2p/pull/1201) - closed, but extracted some of tests into [test(gossipsub): Topic Membership Tests - updated](https://github.com/vacp2p/nim-libp2p/pull/1363) - merged
+  - [test(gossipsub): refactor testgossipinternal](https://github.com/vacp2p/nim-libp2p/pull/1366) - merged, which closed an issue [Improve testgossipinternal file](https://github.com/vacp2p/nim-libp2p/issues/1207)
+  - [test(gossipsub): block5 protobuf test cases](https://github.com/vacp2p/nim-libp2p/pull/1204) - merged, and closed an issue [Protobuf encoding & decoding not compatible with different references](https://github.com/vacp2p/nim-libp2p/issues/1208)
 
 ### vac:dst:
 - `admin/misc`
@@ -156,6 +220,26 @@ draft: false
     - DA Encoding PR - https://github.com/vacp2p/rfc-index/pull/156
 
 ### vac:sec:
+- `ift:2025q2-signing-devices-upgrade:device-assignment-and-registry`
+    - Documented a convention for device assignment for new signers
+- `ift:2025q2-signatory-registry-implementation:signatory-inventory-revalidation`
+    - ~30 signing addresses pending (EOA/individual mostly)
+- `ift:2025q2-custody-improvement-plan:mpc-solution-review`
+    - Reviewed the Coinbase MPC general principles for its open source library
+- `ift:2025q2-audit-plan-refinement:smart-contract-testing`
+    - Performed a security gap analysis based on the latest repository updates (vault).
+    - Conducted an initial test run for the refined smart contract security plan.
+    - Wrote test cases with Foundry to test Codex smart contracts.
+-   `ift:2025q2-cicd-security-review:gha-hardening`
+    - Improved GitHub Actions access controls and secret management.
+    - Audited reusable workflows for security gaps.
+    - Reviewed token creation requests.
+    - Reviewed existing PATs and hardened them to prevent token exposure and misuse.
+    - Tracked and resolved issues identified in projects via Dependabot and CodeQL.
+- `ift:2025q2-sec-infra-maintenance:n8n-onprem-workflow-backup`
+    - Finalized configuration and run test for subprocess to generate GitHub files
+- `ift:2025q2-finance-automation`
+    - Implemented upgrades for new CC update from BBHR to Iplicit
 
 ### vac:nes:
 - `state-separation-architecture-poc:hybrid`
@@ -169,4 +253,5 @@ draft: false
 - `state-separation-architecture-poc:onboarding`
     - Formalizing NSSA components [here](https://notes.status.im/oA-hDDEdQCuiZNHNPA3e8w?view)
     - Created PRs [#75](https://github.com/vacp2p/nescience-testnet/pull/75), [#76](https://github.com/vacp2p/nescience-testnet/pull/76) and [#77](https://github.com/vacp2p/nescience-testnet/pull/77) with updates to the `utxo` crate to align with specifications.
+
 
