--- a/content/updates/2025-06-02.md
+++ b/content/updates/2025-06-02.md
@@ -12,6 +12,7 @@ draft: false
 ### highlights
 - Completed performance evaluations for GossipSub v1.4, v1.4+stagger, PPPt, 2.0
 - Good alignment/collab with linea on bridge work
+- Proposal of refined block rewards emission schedule for Nomos.
 
 ### vac:p2p:
 - `ift:2025q1-gossipsub-perf-improvements`
@@ -42,6 +43,36 @@ draft: false
     - assisted on PR: [nim-libp2p#1399](https://github.com/vacp2p/nim-libp2p/pull/1399)
 
 ### vac:tke:
+- `admin`
+  - 1 CC day off (Ascension Day, May 29)
+  - wrote down the team's monthly report
+  - 3 days at ETHPrague and 1 day (plus weekend) at ETHGlobal Hackathon Prague
+- `vac:tke:ift:support-to-ift-units::logos-basket`
+  - worked on a proposal for $LOGOS as unique token for the tech stack
+  - Further research and discussion
+  - Catchup with latest here
+  - continue reserch on basket and joint value accrual
+- `vac:tke:ift:support-to-ift-units::tge`
+  - reviewed integrated document
+- `vac:tke:nomos:macroeconomy::block-rewards`
+  - studied Juan's work on "token emissions as optimal control problem"
+  - proposed a block rewards emission rate on top of the work above
+  - sketched the whole block rewards work
+- `vac:tke:status:karma-incentives:karma-params`
+  - Work on tier definition based on conversation with Status team
+- `vac:tke:nomos:macroeconomy::tfms-primer`
+  - Pushed on nomos DA, TFMs and block rewards
+  - Catchup with discussion
+- `vac:tke:ift:tokenomics-research-forum::minting-control`
+  - Keep refining work on optimal control and minting
+- `vac:tke:ift:tokenomics-research-forum:grantico`
+  - read Martin's work on Grantico
+  - Present the work in the research call
+- `vac:tke:ift:ghost:tokenomics-design`
+  - Discuss with Matt	
+- `vac:tke:codex:cdx-launch::preparations`
+  - get data analusys on competitor growth 
+  - help on token emission schedule based on a KPI
 
 ### vac:qa:
 - `nomos:2025q2-da-testing:data-confidentiality` 
@@ -211,5 +242,4 @@ draft: false
     - Review the Security Engineer JD to start the hiring process.
 
 ### vac:nes:
-
 
