--- a/content/monthly/2025-04.md
+++ b/content/monthly/2025-04.md
@@ -391,7 +391,8 @@ draft: false
 
 ### Nim
 #### highlights
-#### report
+ - Tooling (`nimlanbserver` and `vscode extension`) release with multiple fixes and improvements
+ - Test Runner for `unittest2`
 
 ### Security
 #### highlights
@@ -438,6 +439,48 @@ draft: false
         - https://www.notion.so/ift-2025q2-finance-automation-trading-monitoring-alerts-1ce8f96fb65c80929c51f3f5a94172c8?pvs=4
 
 ### Nescience
-#### highlights
-#### report
+#### Highlights
+- Designated scope and responsibilities for NSSA components (wallet, SDK and zkVM) for end-to-end programmability.
+- Investigated and designed two execution consistency mechanisms (RBC and VBC) for private invocations that update the public state.
+- Investigated selective privacy wrappers for public functions, and the consistency between selective privacy and consistency mechanisms.
+- Started defining the formal execution model for shielded and deshielded transactions. 
+- Engineering wise, implemented smart contract interactions with public state and extracted smart contract primitives.
+- Result-wise, we have clear improvements in end to end programmability enhancements and SE/DE execution models. Also, our code has improved and additional features has been added and redundancies removed.
 
+
+#### Report
+- `vac:nes:state-separation-architecture-poc`  
+    - Overview:  
+        - Fully described transaction lifecycle from wallet to SDK to zkVM to sequencer.
+        - Described SDK access and calls to Risc0.
+        - Designed execution consistency mechanisms (RBC and VBC) for private invocations that update the public state and determined use-cases for each.
+        - Investigated how smart contracts can be written or compiled to support hybrid execution (both public and private calls). 
+        - Explored contract-based and function-based privacy within NSSA.
+        - Explored selective privacy wrappers for public functions (circuit designs for these wrappers were outlined).
+        - Examined re-run approach and verified approach for execution consistency mechanism.
+        - Implementated storing smart contract data in DB.
+        - Implemented smart contract context generation.
+        - Implemented of public state provability.
+    - List of deliverables (ordered as in [task management](https://www.notion.so/State-separation-architecture-PoC-1bf8f96fb65c8034b09bdf2948d15b31)):
+        - [End-to-end programmability](https://www.notion.so/End-to-end-programmability-1cb8f96fb65c80b4b30ac2b142fd79c0)
+        - [Transaction lifecycle](https://www.notion.so/Transaction-lifecycle-from-the-contract-invocation-to-the-validation-1cd8f96fb65c8096847af9426acbad2e)
+        - [Integration of NSSA SDK with RISC0 zkVM](https://www.notion.so/Integration-of-NSSA-SDK-with-RISC0-zkVM-1d68f96fb65c80efb022fa9a508a7d36)
+        - [Execution consistency mechanisms](https://www.notion.so/Execution-consistency-mechanisms-1cb8f96fb65c80eca438e78636671a92)
+        - [Selective privacy function execution vs Execution consistency mechanisms](https://www.notion.so/Selective-privacy-function-execution-vs-Execution-consistency-mechanisms-1d78f96fb65c80fd82ebfb29ba698b5a)
+        - [Function-level vs. contract-level privacy in hybrid smart contracts](https://www.notion.so/Function-level-vs-contract-level-privacy-in-hybrid-smart-contracts-1d78f96fb65c804e8acadf7454131134)
+        - [Hybrid smart contract approaches with RBC and VBC](https://www.notion.so/Hybrid-smart-contract-approaches-with-RBC-and-VBC-1d88f96fb65c80289055fce4f5d1c830)
+        - [Smart contract public state storage in DB](https://github.com/vacp2p/nescience-testnet/pull/53)
+        - [SC public stage storage testing](https://github.com/vacp2p/nescience-testnet/pull/54)
+        - [Smart contract public context](https://github.com/vacp2p/nescience-testnet/pull/55)
+        - [serde_json instead of GroupEncoding serialization](https://github.com/vacp2p/nescience-testnet/pull/56)
+        - [Implementation of Public State Provability](https://github.com/vacp2p/nescience-testnet/pull/57)
+        - [Deterministic serialization of public sc context](https://github.com/vacp2p/nescience-testnet/pull/58)
+        - [Storage primitives split](https://github.com/vacp2p/nescience-testnet/pull/59)
+        - [Refactor](https://github.com/vacp2p/nescience-testnet/pull/60)
+        - [Fix register account method](https://github.com/vacp2p/nescience-testnet/pull/62)
+        - [Various qol and fixes](https://github.com/vacp2p/nescience-testnet/pull/63)
+    - Completed tasks (big tasks):
+        - `vac:nes:2025q2:state-separation-architecture-poc:sc-prog`
+        - `vac:nes:2025q2:state-separation-architecture-poc:sc-public`
+        - `vac:nes:2025q2:state-separation-architecture-poc:update`
+        - `vac:nes:2025q2:state-separation-architecture-poc:sc-prim`
