--- a/content/monthly/2025-05.md
+++ b/content/monthly/2025-05.md
@@ -355,6 +355,8 @@ draft: false
 
 ### Nim
 #### highlights
+- Tooling release Nimlangserver v1.12.0 and vscode extension v1.8.x
+- Started initial work for nimble 1.0.0
 
 ### Security
 #### highlights
