--- a/content/updates/2025-06-09.md
+++ b/content/updates/2025-06-09.md
@@ -75,6 +75,34 @@ draft: false
     - 1 CC 1d off
 
 ### vac:tke:
+- `vac:tke:ift:support-to-ift-units::logos-basket`
+  - reviewed other $LOGOS token proposals 
+  - addressed team feedback about current proposal
+  - met with stakeholders and discuss proposals
+  - Review the work of J&F and add own ideas/comments
+  - work basket and joint value accrual
+- `vac:tke:ift:support-to-ift-units::tge`
+  - reviewed and commented on the proposed documents
+- `vac:tke:codex:cdx-launch::preparations`
+  - discussed our token model with Rahul
+  - proposeed a token emission schedule based on a KPI
+  - met with Codex team to discuss 
+  - Prepare a proposal/ideas for incentivized testnet for Thu call with Codex
+  - help on token emission schedule based on a KPI
+- `vac:tke:nomos:macroeconomy::block-rewards`
+  - implemented a dashboard that produces the token emission schedule given any number of KPIs
+- `vac:tke:nomos:macroeconomy::revision-economic-model`
+  - addressed feedback in the Stake Estimation doc
+- `vac:tke:ift:tokenomics-research-forum:grantico`
+  - Look into the grant schemes discussed at EthPrague    
+- `vac:tke:status:karma-incentives:karma-params`
+  - Catch up with the bridge progress
+  - Start modeling Karma onboarding flow and leveling up
+  - Work on getting data analysis of priority fees
+- `vac:tke:nomos:macroeconomy::tfms-primer`
+  - Push on tasks related to nomos DA, TFMs and block rewards
+- `vac:tke:ift:tokenomics-research-forum::minting-control`
+  - Keep refining work on optimal control and minting
 
 ### vac:qa:
 - `status:2025q2-status-qa:v2-34`
@@ -257,4 +285,17 @@ draft: false
     - Removed users from Github, Discord and Notion
 
 ### vac:nes:
+- `state-separation-architecture-poc:hybrid`
+    - Quick overview of Ethereum account model to fit within NSSA.
+    - Continued [drafting ideas](https://www.notion.so/Brainstorming-adaptation-of-Solana-s-model-to-NSSA-2028f96fb65c80cbb99fe978c2957758) on how Solana's model could be adapted to support a companion private state and hybrid executions. Described potential ways to adapt the functions that would be needed for a private version of the hello world example.
+    - Delved deeper into the Solana codebase to understand inner workings and where some consistency checks are performed.
+- `state-separation-architecture-poc:sc-utility`
+    - PR reviews
+    - Autogen template work [PR](https://github.com/vacp2p/nescience-testnet/pull/84)
+    - Implemented autogeneration template. [Merge request](https://github.com/vacp2p/nescience-testnet/pull/83)
+- `acz:t2`
+    - Delivered SE/DE optimization document.
+- `acz:t3`
+    - Began work on [light user support analysis](https://www.notion.so/nes-2025q2-nescience-consulting-light-users-2068f96fb65c802db086d6981a50e71f). Outline security and privacy concerns, investigate light user support in other projects.
+    - Detected an [inflation exploit](https://www.notion.so/Inflation-exploit-and-mitigation-20a8f96fb65c80fdbc77ff02b681f70f) in current UTXO 
 
