--- a/content/updates/2025-06-16.md
+++ b/content/updates/2025-06-16.md
@@ -190,3 +190,77 @@ draft: false
     - 1 cc was ooo for 2 days (bank holiday)
     - Reopened a new [issue](https://github.com/RReverser/wasm-bindgen-rayon/issues/26) regarding the multithread test in wasm-bindgen-rayon repo
 
+### vac:nim:
+- `ift:2025q1-nimble`
+    - (VNext supports develop) vNext develop CI green https://github.com/nim-lang/nimble/pull/1402
+    - WIP vnext default to pass CI https://github.com/nim-lang/nimble/pull/1406
+        - Fix regression
+        - Removes unused import
+        - develop progress: handles reverse deps for develop
+        - Fixes an issue where babel root packages failed to install. `uninstall ci` green
+        - tlocal green
+        - Declarative parser by default (enables vnext)
+        - Fixes a rebas- `state-separation-architecture-poc:hybrid`
+    - Continued working on adapting Ethereum account based model into NSSA. Beside adding related specifications about Ethereum, worked on providing ways to integrate private, SE, and DE executions process.
+    - Presented some ideas for Q3 research tasks at the NSSA Research <> ACZ brainstorming meeting ([slides](https://docs.google.com/presentation/d/1QPo7oXnHaDW_4zsvWCmF-5mVITxnRzcqJBQYJUKQ3hw/edit?slide=id.g360faad10fd_0_6#slide=id.g360faad10fd_0_6)).
+    - Presented a lean dev approach proposal for Q3 (and Q4) at the team planning ([slides](https://docs.google.com/presentation/d/1xam3iBaOdiRFZdIlXRVo5adEga0ab-B5sG1RiT2_bHM/edit?slide=id.g360faad10fd_0_6#slide=id.g360faad10fd_0_6)).
+    - Worked with Moudy on concrete research tasks for Q3 (see [here](https://www.notion.so/Q3-complete-tasks-20e8f96fb65c803c91ddfa15fccd8bc1?source=copy_link#2108f96fb65c80719f68d3e5414f4594)).
+    - Continued working on adapting Solana's model to NSSA ([here](https://www.notion.so/Brainstorming-adaptation-of-Solana-s-model-to-NSSA-2028f96fb65c80cbb99fe978c2957758)). Drafted a possible workaround for the team's concerns about runtime selective privacy. Cleaned up the doc and went over what I'd written so far to check it makes sense.
+     - Finished light user support [document](https://www.notion.so/Light-user-support-in-NSSA-2108f96fb65c8031b2f8d651721f7c84). Provided a list of additional work that needs to be done for private and DE transactions to determine feasibility of the two possibilities. Due to lack of documentation and benchmarks targeting mobile devices, proof generation has to be tested.
+    - Delivered [T3](https://www.notion.so/nes-2025q2-nescience-consulting-light-users-2068f96fb65c802db086d6981a50e71f)
+
+- `state-separation-architecture-poc:node-stability`
+    - Reviewed the new changes to PR #82 and left some [additional comments](https://github.com/vacp2p/nescience-testnet/pull/82#pullrequestreview-2926774114) on it.
+
+- `state-separation-architecture-poc:sc-utility`
+    - Added testing and serialization bug fix for PR#82
+    - Prepared question for research on selective privacy model [link](https://www.notion.so/Presentation-document-engineering-questions-and-comments-20e8f96fb65c807baa13cca59f5e647f?source=copy_link)e issue and disables vnext
+        - Removes unusued import. Adds debug logging
+        - Enables vnext
+        - Only MacOs tests
+        - Fix develop regression
+        - Fixes test
+        - Prompt to refresh the package list in vnext when it cant found a package
+        - Fixes tlocal. Disables lock and issues to remove noise
+        - Disables lock and issues
+        - FIxes an issue with develop
+        - picks #head when looking for packages
+        - Adds support for `noRebuild`
+        - Adds support for submodules in vnext
+
+### vac:rfc:
+- `vac:rfc:nomos:2025q2-rfc-iteration`
+    - Pushed changes to all 3 Nomos open PRs and made them "Ready for Review". 
+
+### vac:sec:
+- `ift:2025q2-signatory-registry-implementation:signatory-vault-deployment`
+    - Started adding verified signatory data into the secure vault
+- `ift:2025q2-signatory-registry-implementation:signatory-data-verification`
+    - Continued the collection of signatory information
+-  `ift:2025q2-audit-plan-refinement:smart-contract-testing`
+    - Collaborated with the Codex engineering team to review recent Vault optimizations for hidden risks.
+- `ift:2025q2-security-automation: POC for app catalogue update from Expensify`
+    - Fixed list of fields for App Catalogue, considering incoming data from Expensify
+- `ift:2025q2-iam-operations:remove-unnecessary-users`
+    - Continued the validation of access to critical applications (offboarding)
+    - Investigated and explored how to remove access in GH, Google and Discord via API
+- `ift:2025q2-security-automation: POC for app catalogue update from Expensify`
+    - Finalized production version of App Catalogue update process
+
+### vac:nes:
+- `state-separation-architecture-poc:hybrid`
+    - Continued working on adapting Ethereum account based model into NSSA. Beside adding related specifications about Ethereum, worked on providing ways to integrate private, SE, and DE executions process.
+    - Presented some ideas for Q3 research tasks at the NSSA Research <> ACZ brainstorming meeting ([slides](https://docs.google.com/presentation/d/1QPo7oXnHaDW_4zsvWCmF-5mVITxnRzcqJBQYJUKQ3hw/edit?slide=id.g360faad10fd_0_6#slide=id.g360faad10fd_0_6)).
+    - Presented a lean dev approach proposal for Q3 (and Q4) at the team planning ([slides](https://docs.google.com/presentation/d/1xam3iBaOdiRFZdIlXRVo5adEga0ab-B5sG1RiT2_bHM/edit?slide=id.g360faad10fd_0_6#slide=id.g360faad10fd_0_6)).
+    - Worked with Moudy on concrete research tasks for Q3 (see [here](https://www.notion.so/Q3-complete-tasks-20e8f96fb65c803c91ddfa15fccd8bc1?source=copy_link#2108f96fb65c80719f68d3e5414f4594)).
+    - Continued working on adapting Solana's model to NSSA ([here](https://www.notion.so/Brainstorming-adaptation-of-Solana-s-model-to-NSSA-2028f96fb65c80cbb99fe978c2957758)). Drafted a possible workaround for the team's concerns about runtime selective privacy. Cleaned up the doc and went over what I'd written so far to check it makes sense.
+     - Finished light user support [document](https://www.notion.so/Light-user-support-in-NSSA-2108f96fb65c8031b2f8d651721f7c84). Provided a list of additional work that needs to be done for private and DE transactions to determine feasibility of the two possibilities. Due to lack of documentation and benchmarks targeting mobile devices, proof generation has to be tested.
+    - Delivered [T3](https://www.notion.so/nes-2025q2-nescience-consulting-light-users-2068f96fb65c802db086d6981a50e71f)
+
+- `state-separation-architecture-poc:node-stability`
+    - Reviewed the new changes to PR #82 and left some [additional comments](https://github.com/vacp2p/nescience-testnet/pull/82#pullrequestreview-2926774114) on it.
+
+- `state-separation-architecture-poc:sc-utility`
+    - Added testing and serialization bug fix for PR#82
+    - Prepared question for research on selective privacy model [link](https://www.notion.so/Presentation-document-engineering-questions-and-comments-20e8f96fb65c807baa13cca59f5e647f?source=copy_link)
+
