--- a/content/monthly/2025-05.md
+++ b/content/monthly/2025-05.md
@@ -352,6 +352,28 @@ draft: false
 ### RFC
 #### highlights
 #### report
+- `vac:rfc:waku:2025q2-rfc-iteration`
+    - Continuation of the iteration:
+        - Finished RFC update for device-pairing - https://github.com/waku-org/specs/pull/63
+        - Finished, reviewed and applied feedback from RLN-contract update - https://github.com/waku-org/specs/pull/62
+- `vac:rfc:nescience:2025q2-rfc-iteration`
+    - Started the first 2 Nescience RFCs:
+        - UTXO spec: https://github.com/vacp2p/rfc-index/pull/164
+        - Key Protocol spec: https://github.com/vacp2p/rfc-index/pull/162
+- `vac:rfc:nomos:2025q2-rfc-iteration`
+    - The first iteration of Nomos RFCs in the index:
+        - Nomos DA Networking: https://github.com/vacp2p/rfc-index/pull/160
+        - DA Encoding - https://github.com/vacp2p/rfc-index/pull/156
+        - Nomos SDP - https://github.com/vacp2p/rfc-index/pull/157
+- `vac:rfc:ift:rfc-index-maintenance`
+    - Regular maintenance of index:
+        - Fixed rfc.vac.dev build errors - https://github.com/vacp2p/rfc-index/pull/163
+- `vac:rfc:status-network:2025q2-rfc-iteration`
+    - Started with the first Status Network RFC (in coordination with the SC team):
+        - Finished draft on Status Network Staking RFC - https://github.com/vacp2p/rfc-index/pull/161
+- `admin/misc`
+    - Miscellaneous procedure updates:
+        - Finished the doc for QA + RFC collab - https://www.notion.so/QA-RFC-Collaboration-1dc8f96fb65c80ef99dbd5ea8d27ede5
 
 ### Nim
 #### highlights
