--- a/content/updates/2025-07-07.md
+++ b/content/updates/2025-07-07.md
@@ -278,7 +278,21 @@ draft: false
     - Met with Hanno about the plan for next RFCs for this quarter, among the updates, we will also start with qaku as the first RFC to be written by our team for apps built on top of Waku.
 
 ### vac:sec:
-
+- `ift:2025q2-signatory-registry-implementation:signatory-data-verification`
+    - Added verification data from signing accounts
+- `ift:2025q2-signatory-registry-implementation:signatory-vault-deployment`
+    - Added verified signatory data into the secure vault
+- `ift:2025q2-cicd-security-review:status-design-reviews`
+    - Completed security requirements review for Status wallet and desktop (issue#692) (GitHub issue remains open)
+    - Posted review comments and held discussions for Status security design (issue#692)
+    - Worked on defining scope, requirements, and pre-audit evaluation for Status external audit request
+- `ift:2025q2-vulma-and-ir:incidents`
+    - Completed Keycard incidents secrets rotations and related IR investigations
+    - Finalized secrets and credentials rotations
+- `ift:2025q2-security-automation:wallet-data-automatic-updates`
+    - Validated concept for n8n workflow
+- `ift:2025q2-iam-operations:remove-unnecessary-users`
+    - Completed extracting user details for user management (GitHub, Discord, Google)
 ### vac:nes:
 - `Q2 last plans`
     - Reviewed [Solana's doc](https://www.notion.so/Adapting-Solana-s-architecture-to-NSSA-21e8f96fb65c805f9daccf396dffa408?source=copy_link ) and created a [small doc](https://www.notion.so/Solana-s-overall-review-2258f96fb65c807b8a79e91d292fe744?source=copy_link) with summary and some security checks.
