fixes to nescience and nim addition

--- a/content/updates/2025-07-21.md
+++ b/content/updates/2025-07-21.md
@@ -157,31 +157,43 @@ draft: false
 
 ### vac:nes:
 
-- `ift:2025q1-gossipsub-perf-improvements`
-    - Looked into Ethereum consensus, and P2P interface specs
-    - Looked in detail into DAS (and possible approaches and discussions on dissemination and sampling)	
-		- catching up different discussions and proposals on dissemination and sampling
-- `vac:p2p:ift:2025q2-nimlibp2p-maintenance:maintenance`
-    - Started to modify nim-quic to use BoringSSL/AWS-LC (they're the same API wise, still not sure which one to use)
-    - Currently it uses cmake and this is a big problem as it still introduces an additional dependency and nimbus is actively trying to avoid to use cmake
-    - I'm trying to get it to compile without cmake, just with {.compile.} pragmas
-- `vac:p2p:ift:2025q2-nimlibp2p-maintenance:maintenance`
-    - continued working on performance improvements issue: [nim-libp2p#1484](https://github.com/vacp2p/nim-libp2p/pull/1484)
-        - current performance improvement is approximately 55.5%
-        - chore: utilizing newSeqUninitialized [nim-libp2p#1510](https://github.com/vacp2p/nim-libp2p/pull/1510)
-        - chore: add template newSeqUninit [nim-libp2p#1518](https://github.com/vacp2p/nim-libp2p/pull/1518)
-        - perf(noise): encryptWithAd improvement [nim-libp2p#1520](https://github.com/vacp2p/nim-libp2p/pull/1520)
-        - refactor(yamux): memory usage improvements [nim-libp2p#1504](https://github.com/vacp2p/nim-libp2p/pull/1504) 
-            - one test fails
-    - chore: removing unused type StreamSeq [nim-libp2p#1507](https://github.com/vacp2p/nim-libp2p/pull/1507) 
-- `vac:p2p:ift:2025q2-nimlibp2p-autotls:cert-installation`
-    - Wrapping up cert installation
-    - Dealing with async issues on switch
-- `vac:p2p:ift:2025q2-nimlibp2p-kad-dht
-   - Primed my brain reading the [original research paper](https://cs.nyu.edu/~anirudh/CSCI-GA.2620-001/papers/kademlia.pdf)
-   - perused the [spec](https://github.com/libp2p/specs/blob/master/kad-dht/README.md)
-   - Documented initial code perusal with a [PR](https://github.com/vacp2p/nim-libp2p/pull/1523)
-- `misc/admin`
-    - 1 CC 2d OoO (sick leave)
+### vac:nim:
+
+- `ift:2025q1-nimble`
+  - Disables legacy. vNext is default
+    https://github.com/nim-lang/nimble/pull/1428
+      - Disables legacy. vNext is default
+      - Fixes the CI. Also comment one test as the legacy diverged from vnext in the previous release. A follow up pr will fix it
+      - adds missing chunk
+      - fix ci
+      - Comments task deps + develop test
+      - Fix test
+      - Fix test
+  - Bumps 0.20.1 (
+   
+  - Fixes #1419 
+   
+  - #Fixes 1418 "nimble test -c and nimble test --continue causes tests t… (latest commit
+  - Fixes #1412. Allow spaces in paths 
+    https://github.com/nim-lang/nimble/pull/1424
+    
+  - Fixes an issue where the old code path falls into recursive deps and causes unneeded deps to be present 
+    https://github.com/nim-lang/nimble/pull/1423
+   
+  - Reactivates url in trequires tests 
+    https://github.com/nim-lang/nimble/pull/1422
+   
+  - Fixes an issue where sometimes, when using special versions a duplicated entry appears in `nimble.paths`
+    https://github.com/nim-lang/nimble/pull/1420
+      - Preprocess urls before SAT
+      - adds extra test
+      - dont normalize requires, comment urls in test (fix will come in a subsequent pr)
+      - use proc
+
+  - Release `nimble v0.20.1`
+  
+- `ift:2025q1-nim-ide-tooling`
+    - Bumps `nimble 0.20.1`
+    https://github.com/nim-lang/Nim/pull/25062
 
 
