added SC and P2P, fixed an error

--- a/content/monthly/2025-07.md
+++ b/content/monthly/2025-07.md
@@ -18,7 +18,59 @@ draft: false
 - nim-libp2p presentation done @ LibP2P day
 #### report
 
-
+- `ift:2025q3-gossipsub-perf-improvements`
+    - Overview:
+        - Focused on finalizing the gossipsub blogpost. 
+        - Completed implementation of push-based messaging in gossipsub v1.4 and wrapped work on message rotation, with testing in progress. 
+        - Conducted deep dive into ethereum p2p interface specs, DAS approaches, and beam chain roadmap, with particular attention to dissemination, sampling, and peer coordination mechanisms.
+    - Completed tasks:
+        - `vac:p2p:ift:2025q2-gossipsub-perf-improvements:gossipsub-1_4-impl`
+        - `vac:p2p:ift:2025q2-gossipsub-perf-improvements:stream-prioritization`
+    - Delivered deliverables:
+        - [vacp2p/nim-libp2p#1448](https://github.com/vacp2p/nim-libp2p/pulls/1448) feat: GossipSub v1.4 
+- `vac:p2p:ift:2025q3-nimlibp2p-mix:mix-core`
+    - Overview:
+        - Refactors to make mix production ready and decoupled from higher layer protocols
+        - Currently working on SURBs
+    - Delivered deliverables:
+        - [vacp2p/mix#52](https://github.com/vacp2p/mix/pull/52) refactor: integrate mix-waku-integ and poc/gossipsub
+- `vac:p2p:ift:2025q3-nimlibp2p-maintenance:maintenance`
+    - Overview:
+        - Addressed performance regressions, current gains ~55%. 
+        - Contributed several cleanup and refactor PRs across quic, noise, yamux, and switch. 
+        - Hid autotls under compile flag hygiene.
+        - Setup of a nix flake for nim-libp2p repo
+        - Started to look into porting nim-quic to boringssl/aws-lc without cmake. 
+        - Fixed CI issues, improved test coverage, and assisted in peer connection and benchmarking analysis.
+        - Prepared v1.12.0 release with fixes to quic transport issues and test stability.
+        - Dropped support of nim 1.6
+    - Delivered deliverables:
+        - Maintenance work is being tracked in [Maintenance 2025Q3](https://github.com/vacp2p/nim-libp2p/issues/1509)
+- `vac:p2p:ift:2025q2-nimlibp2p-autotls`
+    - Overview:
+        - Addressed feedback on the AutoTLS client spec
+        - Made key fixes enabling certificate installation and usage in WebSocket transport.
+    - Completed tasks:
+        - `vac:p2p:ift:2025q2-nimlibp2p-autotls:certificate-installation`
+    - Delivered deliverables:
+        - [libp2p/specs#682](https://github.com/libp2p/specs/pulls/682) Add AutoTLS client spec (pending approval)
+        - AutoTLS is available as part of nim-libp2p [v1.12.0](https://github.com/vacp2p/nim-libp2p/releases/tag/v1.12.0) release
+- `vac:p2p:ift:2025q3-nimlibp2p-kad-dht`
+    - Overview:
+        - Development of kad-dht resumed after having being paused due to working on mix-core and maintenance
+        - Current focus is on implementing PUT_VALUE and GET_VALUE methods
+        - Started work on discovery interface for KadDHT
+    - Delivered deliverables:
+        - [vacp2p/nim-libp2p#1324](https://github.com/vacp2p/nim-libp2p#1324) feat(kad-dht): find nodes 
+- `vac:p2p:ift2025q3-nimlibp2p-universal-connectivity-app`
+    - Overview:
+        - Initiated the development of the universal connectivity app, focusing on direct connection to peers since KademliaDHT is still under active development. 
+        - Limited availability of TUI libs in nim difficult the development of the app
+- `misc/admin`
+    - Timeoff
+        - 1 CC 2d OoO
+    - Delivered deliverables
+        - Libp2p Day presentation: [Intro to nim-libp2p](https://www.youtube.com/watch?v=N3KAPPRlRp4)
 
 ### Tokenomics (public version)
 #### highlights
@@ -62,7 +114,7 @@ draft: false
     - `vac:tke:ift:logos-token:ecosystem-research`
     - `vac:tke:ift:logos-token::logos-poc`
 
-### Tokenomics (public version)
+### Tokenomics (private version)
 #### highlights
 
 - Studied and implemented tier derivation logic using relational definitions and thresholds; demonstrated via a Streamlit dashboard.
@@ -352,7 +404,42 @@ draft: false
         - `vac:dst:ift:2025q2-dst-research-destination:forum-post`
 ### SC
 #### highlights
+
+- Yield bridge work has been taken over by Linea
+- Presented Constant Function Market Makers
+- Participated in audit contest
+
 #### report
+
+- `status:2025q2-sn-native-bridge-yield-bearing-module`
+    - Implemented first agreed upon changes in codebase
+    - Linea later changed their roadmap, causing them to taking the lead on this project
+- `vac:sc:ift:2025q3-fv-tools-research`
+    - Looked into Certora alternatives
+    - Ported some rules to tool called "Kontrol" to assess feasibility and features
+    - **Completed tasks**
+        - This is ongoing
+    - **Deliverables**
+        - Summary of findings will be reported ones done
+- `status:2025q2-karma-rln:karma-tiers`
+    - Overhauled KarmaTiers contract based on discussion with Status L2 team
+    - **Completed tasks**
+        - `status:2025q2-karma-rln:karma-tiers:implementation`
+    - **Deliverables**
+        - [Refactor PR](https://github.com/vacp2p/staking-reward-streamer/pull/228)
+- `ift:2025q3-security-audits`
+    - Participated in contest
+    - Two protocols, stable swap and lending pools
+    - **Completed tasks**
+        - `ift:2025q3-security-audits:2025-07`
+    - **Deliverables**
+        - No deliverables yet as contest is being judged
+- `ift:2025q3-sc-learnup-sessions`
+    - Held and recorded learn up session on Constant Function Market Makers
+    - **Completed tasks**
+        - `ift:2025q3-sc-learnup-sessions:2025-07`
+    - **Deliverables**
+      - [Video Recording of LearnUp Session](https://drive.google.com/file/d/159MFMSabAgDiMpXteohZAWFT48qeqlZ2/view?usp=sharing)
 
 ### ACZ
 #### highlights
