--- a/content/monthly/2025-07.md
+++ b/content/monthly/2025-07.md
@@ -608,6 +608,57 @@ draft: false
 
 ### Nescience
 #### highlights
+
+- Investigated and chosen a zkVM that fits NSSA's needs.
+- Investigated and settled on a model for public and private state.
+- Implemented a complete version of sequencer.
+- Implemented a PoC for selective privacy.
+- Result-wise, we have settled on Risczero as the best fit for NSSA and also designed the public and private states and accounts that allows us to use selective privacy within the architecture. Our code was also improved by working on and advanced version of the sequencer as well as adding integration tests. 
 #### report
 
+- `vac:nes:state-separation-architecture-poc`  
+    - Overview:  
+        - Research-wise, we:
+            - Investigated whether Risc0 / RV32IM has deterministic builds and deterministic sandboxed executions.
+            - Investigated if Risc0 / RV32IM is friendly for gas metering and instruction counting.
+            - Explored and analyzed the feasibility of selective privacy using a Risc0 based zkVM.
+            - Investigated which VM+zkVMs (other than Risc0) are suitable for selective privacy.
+            - Drafted Solana style adaptation: draw state-transition diagrams for private, shielded, and deshield flows.
+            - Benchmarked qualitative trade-offs: validator hardware cost, parallelisability, sequencer-provability (impact on future L2 / Mina-style recursive proofs).
+            - Analysed developer experience issues when privacy plumbing is removed from dApp code.
+        - Engineering-wise, we implemented:
+            - Sequencer internal checks modification: account store (addresses and balances), transactions with valid signatures, state transition for token transfer.
+            - Sequencer RPC improvements: return of balance, transaction details.
+            - Sequencer stability improvements: mechanisms against replay attacks, integration tests.
+
+
+    - List of deliverables (ordered as in [task management](https://www.notion.so/State-separation-architecture-PoC-20c8f96fb65c801f91cecd37a727fd99)):
+        - [Determinism in R0](https://www.notion.so/Determinism-in-Risc0-s-implementation-of-rv32im-2248f96fb65c80efa57fea2f93c5fde2?source=copy_link)
+        - [Instruction count analysis](https://www.notion.so/Instruction-count-analysis-22a8f96fb65c80ada5e0f5d2b0857214?source=copy_link)
+        - [PoC of selective privacy](https://www.notion.so/Conclusions-and-POC-writeup-22c8f96fb65c80eab8ebc6dc98053873?source=copy_link)
+        - [zkVM analysis](https://www.notion.so/zkVM-selection-2268f96fb65c805292eae929dde0c2ee?source=copy_link)
+        - [Conclusion on zkVM selection](https://www.notion.so/Conclusion-on-the-chosen-VM-and-zkVM-for-NSSA-2318f96fb65c806a810ed1300f56992d?source=copy_link)
+        - [State transition](https://www.notion.so/State-transition-mechanisms-2398f96fb65c8031849effa7ff739934?source=copy_link)
+        - [Ethereum vs. Solana](https://www.notion.so/Ethereum-vs-Solana-analysis-2338f96fb65c80e38aeaf290c53971bc?source=copy_link)
+        - [Public state model decision](https://www.notion.so/Public-state-model-decision-2388f96fb65c80758b20c76de07b1fcc?source=copy_link)
+        - [UTXO nullifier calculation fix and circuits updates](https://github.com/vacp2p/nescience-testnet/pull/86)
+        - [Zkvm tests](https://github.com/vacp2p/nescience-testnet/pull/87)
+        - [SequencerAccountsStore updates](https://github.com/vacp2p/nescience-testnet/pull/88)
+        - [Remove precomputed hash from Transaction](https://github.com/vacp2p/nescience-testnet/pull/89)
+        - [Bump risc0 version to 2.2](https://github.com/vacp2p/nescience-testnet/pull/90)
+        - [Add MIT LICENSE](https://github.com/vacp2p/nescience-testnet/pull/93)
+        - [Add clippy to CI](https://github.com/vacp2p/nescience-testnet/pull/78)
+        - [Add signature validation for transactions in sequencer](https://github.com/vacp2p/nescience-testnet/pull/91)
+        - [Add get account balance method to sequencer RPC server](https://github.com/vacp2p/nescience-testnet/pull/94)
+        - [Add get transaction by hash method to RPC server](https://github.com/vacp2p/nescience-testnet/pull/95)
+        - [State transition for token transfer](https://github.com/vacp2p/nescience-testnet/pull/92)
+        - [Prevent replay attacks with nonce mechanism](https://github.com/vacp2p/nescience-testnet/pull/97)
+        - [Integration tests](https://github.com/vacp2p/nescience-testnet/pull/96)
+
+    - Completed tasks (big tasks):
+        - `vac:nes:2025q2:state-separation-architecture-poc:zkvm`
+        - `vac:nes:2025q2:state-separation-architecture-poc:seq-check`
+        - `vac:nes:2025q2:state-separation-architecture-poc:state`
+        - `vac:nes:2025q2:state-separation-architecture-poc:seq-rpc`
+        - `vac:nes:2025q2:state-separation-architecture-poc:seq-stability`
 
