--- a/content/monthly/2025-07.md
+++ b/content/monthly/2025-07.md
@@ -72,7 +72,7 @@ draft: false
     - Delivered deliverables
         - Libp2p Day presentation: [Intro to nim-libp2p](https://www.youtube.com/watch?v=N3KAPPRlRp4)
 
-### Tokenomics (public version)
+### Tokenomics
 #### highlights
 
 - Studied and implemented tier derivation logic using relational definitions and thresholds; demonstrated via a Streamlit dashboard.
